--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///database.db
+sqlalchemy.url = sqlite:///home/jforce/github/tidePipeline/EL4Project/database.db
 
 
 # Logging configuration
