--- a/tests/unfiltered_test/config.ini
+++ b/tests/unfiltered_test/config.ini
@@ -1,5 +1,5 @@
 [EXECUTABLES]
 netmhc=/usr/bin/netmhc
-crux=crux
-msgfplus=/home/jforce/MSGFPlus/MSGFPlus.jar
-maxquant=/home/jforce/MaxQuant/bin/MaxQuantCmd.exe
+crux=/home/jordan/crux
+msgfplus=/home/jordan/MSGFPlus/MSGFPlus.jar
+maxquant=/home/jordan/MaxQuant/bin/MaxQuantCmd.exe
