It wasn't using the netmhc location in config.ini

--- a/murphy_replication/config.ini
+++ b/murphy_replication/config.ini
@@ -1,5 +1,5 @@
 [EXECUTABLES]
-netmhc=/usr/bin/netmhc
+netmhc=/home/code/IMPORT/netMHC-4.0/netmhc
 crux=/home/jordan/crux
 msgfplus=/home/jordan/MSGFPlus/MSGFPlus.jar
 maxquant=/home/jordan/MaxQuant/bin/MaxQuantCmd.exe
