Started running script for large-to-small with Tide

--- a/murphy_replication/config.ini
+++ b/murphy_replication/config.ini
@@ -1,5 +1,5 @@
 [EXECUTABLES]
-netmhc=/home/code/IMPORT/netMHC-4.0/netmhc
+netmhc=/home/code/IMPORT/netMHC-4.0/netMHC
 crux=/home/jordan/crux
 msgfplus=/home/jordan/MSGFPlus/MSGFPlus.jar
 maxquant=/home/jordan/MaxQuant/bin/MaxQuantCmd.exe
