Finished up the ini part. Added tools for removing things from project

--- a/netmhc_decoys/pipeline.ini
+++ b/netmhc_decoys/pipeline.ini
@@ -1,8 +1,8 @@
 [Index]
 IndexType = msgf
 sourceType = TargetSet
-sourceName = KbTargetSet
-netmhcdecoys = MouseProteinEightMers_H-2-Db, MouseProteinNineMers_H-2-Db, MouseProteinTenMers_H-2-Db, MouseProteinElevenMers_H-2-Db
+sourceName = Combined
+netmhcdecoys = MouseProteinEightMers_H-2-Dd, MouseProteinNineMers_H-2-Dd, MouseProteinTenMers_H-2-Dd, MouseProteinElevenMers_H-2-Dd, MouseProteinEightMers_H-2-Kd, MouseProteinNineMers_H-2-Kd, MouseProteinTenMers_H-2-Kd, MouseProteinElevenMers_H-2-Kd
 memory = 10000
 contaminants = JeremyContaminants
 
@@ -13,5 +13,15 @@ searchNumber = 1
 [PostProcess1]
 postProcessType = percolator
 searchNumber = 1
-cutoffsAndLocations = (0.8, ninety_percent_one.txt)
+cutoffsAndLocations = (0.9, netmhc_decoys/combined/ninety_percent_prep.txt), (0.8, netmhc_decoys/combined/eighty_percent_prep.txt), (0.5, netmhc_decoys/combined/fifty_percent_prep.txt), (0.1, netmhc_decoys/combined/ten_percent_prep.txt), (0.05, netmhc_decoys/combined/five_percent_prep.txt), (0.01, netmhc_decoys/combined/one_percent_prep.txt), (0.02, netmhc_decoys/combined/two_percent_prep.txt)
+paramFile = default_percolator_param_file
+
+[Search2]
+mgfName = Run2MGF
+searchNumber = 2
+
+[PostProcess2]
+postProcessType = percolator
+searchNumber = 2
+cutoffsAndLocations = (0.9, netmhc_decoys/combined/ninety_percent_run2.txt), (0.8, netmhc_decoys/combined/eighty_percent_run2.txt), (0.5, netmhc_decoys/combined/fifty_percent_run2.txt), (0.1, netmhc_decoys/combined/ten_percent_run2.txt), (0.05, netmhc_decoys/combined/five_percent_run2.txt), (0.01, netmhc_decoys/combined/one_percent_run2.txt), (0.02, netmhc_decoys/combined/two_percent_run2.txt)
 paramFile = default_percolator_param_file
