Yay, I was able to use IC50s in Percolator as features

--- a/netmhc_decoys/tide_pipeline_ranked_svm.ini
+++ b/netmhc_decoys/tide_pipeline_ranked_svm.ini
@@ -1,7 +1,7 @@
 [Index]
 IndexType = tide
 sourceType = TargetSet
-sourceName = CombinedUnfiltered
+sourceName = Combined
 contaminants = JeremyContaminants
 paramFile=zero
 
