Made a bunch of changes, including making it so the target pin, decoy pin, and log columns only filled in if those files exist when doing tide search (see Runners.py)

--- a/netmhc_decoys/tide_pipeline_ranked_svm.ini
+++ b/netmhc_decoys/tide_pipeline_ranked_svm.ini
@@ -1,7 +1,7 @@
 [Index]
 IndexType = tide
 sourceType = TargetSet
-sourceName = Combined
+sourceName = CombinedUnfiltered
 contaminants = JeremyContaminants
 paramFile=zero
 
