--- a/tests/multistep_test/config.ini
+++ b/tests/multistep_test/config.ini
@@ -1,5 +1,6 @@
 [EXECUTABLES]
-netmhc=/usr/bin/netmhc
-crux=crux
+netmhc=/home/jforce/Downloads/netMHC-4.0/netMHC
+crux=/home/jforce/crux-3.2.Linux.x86_64/bin/crux
 msgfplus=/home/jforce/MSGFPlus/MSGFPlus.jar
 maxquant=/home/jforce/MaxQuant/MaxQuant.exe
+msgf2pin=msgf2pin
