Got the multistage pipeline working again.

--- a/tests/multistep_test/config.ini
+++ b/tests/multistep_test/config.ini
@@ -1,6 +1,6 @@
 [EXECUTABLES]
 netmhc=/home/jforce/Downloads/netMHC-4.0/netMHC
-crux=/home/jforce/crux-3.2.Linux.x86_64/bin/crux
+crux=/home/jforce/git/crux-toolkit/crux_install/bin/crux
 msgfplus=/home/jforce/MSGFPlus/MSGFPlus.jar
 maxquant=/home/jforce/MaxQuant/MaxQuant.exe
-msgf2pin=msgf2pin
+msgf2pin=/usr/bin/msgf2pin
