Adding ability to concat FASTA files

--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = alembic
+script_location = migrations/alembic
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
@@ -20,8 +20,8 @@ script_location = alembic
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
-
-# set to 'true' to allow .pyc and .pyo files without
+#
+#al set to 'true' to allow .pyc and .pyo files without
 # a source .py file to be detected as revisions in the
 # versions/ directory
 # sourceless = false
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///home/jordan/git/tidePipeline/MurphyReplication/database.db
+sqlalchemy.url = sqlite:///home/jforce/sshfs/gene_galaxy_root/gene-data/jordan/projects/human/database.db
 
 
 # Logging configuration
